@@ -1,4 +1,5 @@
 Changes relative to tre-0.20:
+  * JS class methods may be declared static.
   * PHP class members and methods may be declared static,
     protected or private.
   * Return values of constructors are ignored.
